# FitGL

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
Apps/: templateSimple.cpp  templateSimple.h
Apps/000Empty/: main.cpp
Apps/Examples/: CMakeLists.txt
Apps/Examples/000_Callbacks/: callbacks.cpp  callbacks.h
Apps/Examples/001_Minimal/: minimal.cpp
Apps/Examples/002_MultipleViews/: multiview.cpp
Apps/Examples/003_MultipleWindows/: multiwindow.cpp
Apps/Examples/004_Textures/: textures.cpp
Apps/Examples/005_Imgui/: main.cpp
Apps/Examples/006_ModelLoader/: main.cpp
Apps/Examples/007_Timer/: main.cpp
Apps/Examples/008_OrbitManipulator/: main.cpp
Apps/Examples/e00_Callbacks/: callbacks.cpp  callbacks.h
Apps/Examples/e01_Minimal/: minimal.cpp
Apps/Examples/e02_MultipleViews/: multiview.cpp
Apps/Examples/e03_MultipleWindows/: multiwindow.cpp
Apps/Examples/e04_Textures/: textures.cpp
Apps/Examples/e05_Imgui/: main.cpp
Apps/Examples/e06_ModelLoader/: main.cpp
Apps/Examples/e07_Timer/: main.cpp
Apps/Examples/e08_OrbitManipulator/: main.cpp
Apps/Examples/e09_3DPiskvorky/: main.cpp
Apps/Examples/e10_Extensions/: main.cpp
Apps/Examples/e11_Tesselation/: main.cpp
Apps/Examples/e12_EndlessTerrain/: main.cpp
Apps/Examples/e13_ShadowMap/: main.cpp
Apps/Examples/e14_ShadowCubemap/: main.cpp
Apps/Examples/x01_3DPiskvorky/: main.cpp
Apps/Examples/x01_Challenge/: main.cpp
Apps/Examples/x02_Extensions/: main.cpp
Apps/Nei/: CMakeLists.txt
Apps/Nei/001_Test/: CMakeLists.txt  main.cpp  temp.cpp
Apps/Nei/n00_Test/: CMakeLists.txt  main.cpp
Apps/Nei/n01_Planet/: CMakeLists.txt  main.cpp
Apps/Nei/n02_Beams/: CMakeLists.txt  main.cpp
Apps/Nei/n03_SponzaOpenGL/: CMakeLists.txt  main.cpp
Apps/Nei/n04_SponzaVulkan/: CMakeLists.txt  main.cpp
Apps/PGP2015/: CMakeLists.txt  DU01.cpp  DU01.h  DU02.cpp  DU02.h  DU03.cpp  DU03.h  DU04.cpp  DU04.h  DU05.cpp  DU05.h
Apps/PGP2016/: CMakeLists.txt  pgp2016.cpp  pgp2016.h  pgp2016du01.cpp  pgp2016du02.cpp  pgp2016du03.cpp  pgp2016du04.cpp  pgp2016du05.cpp
Apps/Tests/: CMakeLists.txt
Apps/Tests/001_TextureCompression/: 001_TextureCompression.cpp  001_TextureCompression.h
Apps/Tutorial/: CMakeLists.txt
Apps/Tutorial/001_HelloTriangle/: main.cpp
Apps/Tutorial/002_Primitives/: main.cpp
Apps/Tutorial/0xx_Blending/: blending.cpp
Apps/Tutorial/0xx_CubeMapping/: cubeMapping.cpp
Apps/Tutorial/0xx_EnvieromentMapping/: cubeMapping.cpp
Apps/Tutorial/0xx_FsRaytracing/: fsRaytracing.cpp
Apps/Tutorial/0xx_Interpolation/: interpolation.cpp
Apps/Tutorial/0xx_Mipmap/: mipmap.cpp
Apps/Tutorial/0xx_Noise/: noise.cpp
Apps/Tutorial/0xx_NormalMapping/: normalMapping.cpp
Apps/Tutorial/0xx_ParalaxMapping/: paralaxMapping.cpp
Apps/Tutorial/0xx_Triplanar/: triplanar.cpp
Apps/Tutorial/0xx_UV/: uv.cpp
Apps/Tutorial/0xx_Wrapping/: wrapping.cpp
CMakeModules/: FindAssimp.cmake  FindGLEW.cmake
FGL/: BaseApp.cpp  BaseApp.h  CMakeLists.txt  Camera.cpp  Camera.h  DormonCamera.h  Geometry.cpp  Geometry.h  Gui.cpp  Image.h  Loader.h  LoaderAssimp.cpp  LoaderText.cpp  LoaderTexture.cpp  Manipulator.cpp  Manipulator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Shape.cpp  Shape.h  Shared.h  ValuePrinter.h  bunny.h  geGLshared.h
FGL/SDLWindow/: SDLEventProc.cpp  SDLEventProc.h  SDLWindow.cpp  SDLWindow.h
FGL/utils/: drawNode.cpp  utils.h
Framework/: BaseApp.cpp  BaseApp.h  CMakeLists.txt  Camera.cpp  Camera.h  Debugging.h  Gui.cpp  Gui.h  Image.h  LoadTextFile.cpp  LoadTextFile.h  Loader.cpp  Loader.h  LoaderAssimp.cpp  LoaderText.cpp  LoaderTexture.cpp  Manipulator.cpp  Manipulator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  ProgramObject.h  Shader.h  SimpleApp.cpp  SimpleApp.h  Timer.h  bunny.h
Framework/SDLWindow/: CallbackInterface.h  EventCallbackInterface.h  EventDataInterface.h  EventHandlerInterface.h  SDLEventData.h  SDLEventProc.cpp  SDLEventProc.h  SDLWindow.cpp  SDLWindow.h
Framework/utils/: drawNode.cpp  utils.h
NeiVu/: Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  LoaderAssimp.cpp  LoaderAssimp.h  Pipeline.cpp  Pipeline.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VuApp.cpp  VuApp.h  VuDebug.h  VuInfo.cpp  VuInfo.h  VuMaterial.cpp  VuMaterial.h  VuMesh.cpp  VuMesh.h  VuNode.cpp  VuNode.h
Resources/Models/Challenge/: cross.fbx  ring.fbx  sphere.fbx
Resources/Models/Logo/: FitGL.fbx
Resources/Models/test/: stone1.fbx
Resources/Models/texCube/: texCube.mtl
Resources/Shaders/000Empty/: empty.vp
Resources/Shaders/Examples/002_MultipleViews/: lambert.frag  lambert.vert
Resources/Shaders/Examples/004_Textures/: empty.vert  quad.geo  texture.frag
Resources/Shaders/NeiVu/: test.frag  test.vert
Resources/Shaders/PGP2015/: du01.frag  du01.vert  du02_cube.frag  du02_cube.geo  du02_cube.vert  du02_quad.frag  du02_quad.geo  du03.frag  du03.tesc  du03.tese  du03.vert  du04.frag  du04.vert  du05.comp  du05.frag  du05.vert  du05_sm.frag  du05_sm.vert
Resources/Shaders/PGP2016/: du01.frag  du01.vert  du02.frag  du02.tesc  du02.tese  du02.vert  du03.frag  du03.vert  du04.frag  du04.geo  du04.vert  du05.comp  materials.glsl  shading.glsl
Resources/Shaders/Tutorial/: blending.fp  blending.vp  cubeMapping.fp  environment.fp  fsRayTracing.fp  fsRayTracing.vp  gradients.vp  interpolation.fp  interpolation.vp  lighting.vp  memoryBandwidth.comp  mipmap.fp  noiseSphere.fp  noiseSphere.vp  normalMapping.fp  normalMapping.vp  orbitManipulator.fp  orbitManipulator.vp  paralaxMapping.fp  paralaxMapping.vp  rasterizationOrder.fp  rasterizationOrder.vp  sphere.fp  sphere.vp  triangle.fp  triangle.vp  triplanar.fp  uv.fp  uv.vp  video.fp  video_gauss.fp  video_gray.fp  video_gray.vp  video_random.fp  video_sobel.fp  water.cp  water.ep  water.fp  water.vp  wrapping.fp  (+3 more)
Resources/Shaders/Utils/: noiseFunctions.vp
Resources/Textures/Tutorial/: volarebk.tga  volareft.tga  volarelf.tga  volarert.tga
libs/Assimp/lib/: assimp-vc140-mt.lib
libs/glew/lib/: glew32.lib
(+22 files in other folders)
